--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
     "require": {
-        "slim/slim": "4.*",
-        "slim/psr7": "^1.5",
+        "guzzlehttp/psr7": "^1",
+        "laminas/laminas-diactoros": "^2.8",
         "nyholm/psr7": "^1.4",
         "nyholm/psr7-server": "^1.0",
-        "guzzlehttp/psr7": "^1",
+        "php-di/php-di": "^6.3",
         "sapphirecat/slim4-http-interop-adapter": "^1.0",
-        "laminas/laminas-diactoros": "^2.8",
         "selective/basepath": "^2.1",
-        "php-di/php-di": "^6.3"
+        "selective/validation": "^2.0",
+        "slim/psr7": "^1.5",
+        "slim/slim": "4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
