--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,13 @@
+<IfModule mod_rewrite.c>
+
+  Header add Access-Control-Allow-Origin "*"
+
+  Header add Access-Control-Allow-Methods: "GET,POST,OPTIONS,DELETE,PUT,PATCH"
+
+  Header add Access-Control-Allow-Headers: "Content-Type"
+
+</IfModule>
+
 # Redirect to front controller
 RewriteEngine On
 # RewriteBase /
